Joined full wine dataframe

--- a/tests/fix_logs/scraping_fix/02_wine_links_concat.ipynb
+++ b/tests/fix_logs/scraping_fix/02_wine_links_concat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +17,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wine_link</th>\n",
+       "      <th>name</th>\n",
+       "      <th>year</th>\n",
+       "      <th>winery</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>rating_qty</th>\n",
+       "      <th>price</th>\n",
+       "      <th>body</th>\n",
+       "      <th>tannis</th>\n",
+       "      <th>sweetness</th>\n",
+       "      <th>...</th>\n",
+       "      <th>tannis_fix</th>\n",
+       "      <th>sweetness_fix</th>\n",
+       "      <th>acidity_fix</th>\n",
+       "      <th>notes_fix</th>\n",
+       "      <th>pairings_fix</th>\n",
+       "      <th>grapes_fix</th>\n",
+       "      <th>region_fix</th>\n",
+       "      <th>style_fix</th>\n",
+       "      <th>alcohol_fix</th>\n",
+       "      <th>image_fix</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://www.vivino.com/US/en/luigi-bosca-parai...</td>\n",
+       "      <td>Paraiso</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>Luigi Bosca</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>582</td>\n",
+       "      <td>188.33</td>\n",
+       "      <td>73.43435%</td>\n",
+       "      <td>50.905894999999994%</td>\n",
+       "      <td>13.619732499999998%</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>https://www.vivino.com/US/en/catena-zapata-est...</td>\n",
+       "      <td>Estiba Reservada</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Catena Zapata</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>297</td>\n",
+       "      <td>675.0</td>\n",
+       "      <td>74.17103499999999%</td>\n",
+       "      <td>55.8328075%</td>\n",
+       "      <td>14.345029999999998%</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>https://www.vivino.com/US/en/catena-zapata-est...</td>\n",
+       "      <td>Estiba Reservada</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Catena Zapata</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>219</td>\n",
+       "      <td>580.0</td>\n",
+       "      <td>74.17103499999999%</td>\n",
+       "      <td>55.8328075%</td>\n",
+       "      <td>14.345029999999998%</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>https://www.vivino.com/US/en/monteviejo-la-vio...</td>\n",
+       "      <td>La Violeta</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>Monteviejo</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>202</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>73.06289000000001%</td>\n",
+       "      <td>40.9165975%</td>\n",
+       "      <td>21.4814425%</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>https://www.vivino.com/US/en/vina-cobos-cobos-...</td>\n",
+       "      <td>Cobos Volturno</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Viña Cobos</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>198</td>\n",
+       "      <td>399.99</td>\n",
+       "      <td>71.052235%</td>\n",
+       "      <td>45.63599%</td>\n",
+       "      <td>24.262824999999996%</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           wine_link              name  year  \\\n",
+       "0  https://www.vivino.com/US/en/luigi-bosca-parai...           Paraiso  2020   \n",
+       "1  https://www.vivino.com/US/en/catena-zapata-est...  Estiba Reservada  2015   \n",
+       "2  https://www.vivino.com/US/en/catena-zapata-est...  Estiba Reservada  2017   \n",
+       "3  https://www.vivino.com/US/en/monteviejo-la-vio...        La Violeta  2013   \n",
+       "4  https://www.vivino.com/US/en/vina-cobos-cobos-...    Cobos Volturno  2018   \n",
+       "\n",
+       "          winery  rating rating_qty   price                body  \\\n",
+       "0    Luigi Bosca     4.8        582  188.33           73.43435%   \n",
+       "1  Catena Zapata     4.7        297   675.0  74.17103499999999%   \n",
+       "2  Catena Zapata     4.7        219   580.0  74.17103499999999%   \n",
+       "3     Monteviejo     4.7        202   150.0  73.06289000000001%   \n",
+       "4     Viña Cobos     4.7        198  399.99          71.052235%   \n",
+       "\n",
+       "                tannis            sweetness  ... tannis_fix sweetness_fix  \\\n",
+       "0  50.905894999999994%  13.619732499999998%  ...        NaN           NaN   \n",
+       "1          55.8328075%  14.345029999999998%  ...        NaN           NaN   \n",
+       "2          55.8328075%  14.345029999999998%  ...        NaN           NaN   \n",
+       "3          40.9165975%          21.4814425%  ...        NaN           NaN   \n",
+       "4            45.63599%  24.262824999999996%  ...        NaN           NaN   \n",
+       "\n",
+       "  acidity_fix notes_fix pairings_fix grapes_fix region_fix style_fix  \\\n",
+       "0         NaN       NaN          NaN        NaN        NaN       NaN   \n",
+       "1         NaN       NaN          NaN        NaN        NaN       NaN   \n",
+       "2         NaN       NaN          NaN        NaN        NaN       NaN   \n",
+       "3         NaN       NaN          NaN        NaN        NaN       NaN   \n",
+       "4         NaN       NaN          NaN        NaN        NaN       NaN   \n",
+       "\n",
+       "  alcohol_fix  image_fix  \n",
+       "0         NaN        NaN  \n",
+       "1         NaN        NaN  \n",
+       "2         NaN        NaN  \n",
+       "3         NaN        NaN  \n",
+       "4         NaN        NaN  \n",
+       "\n",
+       "[5 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "route = \"../../../src/data/raw/scraped_wines/\" \n",
     "wines1 = pd.read_csv(route + \"wines1.csv\")\n",
@@ -27,25 +241,213 @@
     "wines2_1 = pd.read_csv(route + \"wines2.1.csv\")\n",
     "wines3 = pd.read_csv(route + \"wines3.csv\")\n",
     "wines4 = pd.read_csv(route + \"wines4.csv\")\n",
-    "all_wines = pd.concat([wines1, wines2, wines2_1, wines3, wines4])"
+    "wines5 = pd.read_csv(route + \"wines5.csv\")\n",
+    "all_wines = pd.concat([wines1, wines2, wines2_1, wines3, wines4])\n",
+    "merged = all_wines.join(wines5.set_index(\"wine_link\"), on=\"wine_link\", rsuffix=\"_fix\").reset_index(drop=True)\n",
+    "merged.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Archivo guardado en: /home/martingut27/WineRecommendation/tests/fix_logs/scraping_fix/output.csv\n"
+      "Archivo guardado en: ../../../src/data/processed/all_wines_complete.csv\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wine_link</th>\n",
+       "      <th>name</th>\n",
+       "      <th>year</th>\n",
+       "      <th>winery</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>rating_qty</th>\n",
+       "      <th>price</th>\n",
+       "      <th>body</th>\n",
+       "      <th>tannis</th>\n",
+       "      <th>sweetness</th>\n",
+       "      <th>acidity</th>\n",
+       "      <th>notes</th>\n",
+       "      <th>pairings</th>\n",
+       "      <th>grapes</th>\n",
+       "      <th>region</th>\n",
+       "      <th>style</th>\n",
+       "      <th>alcohol</th>\n",
+       "      <th>image</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>665</th>\n",
+       "      <td>https://www.vivino.com/cl-geisse-rose-brut/w/1...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cave Amadeu</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>5633</td>\n",
+       "      <td>26.24</td>\n",
+       "      <td>39.776%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>54.945%</td>\n",
+       "      <td>{'red fruit': 56, 'tree fruit': 19, 'citrus': ...</td>\n",
+       "      <td>['pork', 'shellfish', 'rich fish (salmon, tuna...</td>\n",
+       "      <td>['Pinot Noir']</td>\n",
+       "      <td>['Brazil', 'Rio Grande do Sul', 'Serra Gaúcha']</td>\n",
+       "      <td>Brazilian Sparkling</td>\n",
+       "      <td>12.5%</td>\n",
+       "      <td>https://images.vivino.com/thumbs/2eG1E4YvQD2lD...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>667</th>\n",
+       "      <td>https://www.vivino.com/zuccardi-malamado-malbe...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Zuccardi</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>5419.0</td>\n",
+       "      <td>25.95</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'oaky': 146, 'black fruit': 110, 'dried fruit...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>['Malbec']</td>\n",
+       "      <td>['Argentina', 'Mendoza']</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13%</td>\n",
+       "      <td>https://images.vivino.com/thumbs/jF7MMUTqSfGFM...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>755</th>\n",
+       "      <td>https://www.vivino.com/zorzal-gran-terroir-pin...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1885</th>\n",
+       "      <td>https://www.vivino.com/zuccardi-cuvee-especial...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Zuccardi</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1112.0</td>\n",
+       "      <td>36.74</td>\n",
+       "      <td>29.1128%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>72.6141%</td>\n",
+       "      <td>{'tree fruit': 37, 'citrus': 22, 'yeasty': 16,...</td>\n",
+       "      <td>['shellfish', 'any junk food will do', 'appeti...</td>\n",
+       "      <td>['Chardonnay']</td>\n",
+       "      <td>['Argentina', 'Mendoza']</td>\n",
+       "      <td>Argentinian Mendoza Sparkling</td>\n",
+       "      <td>12%</td>\n",
+       "      <td>https://images.vivino.com/thumbs/6qXEWMvzS9W5E...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              wine_link name year  \\\n",
+       "665   https://www.vivino.com/cl-geisse-rose-brut/w/1...  NaN  NaN   \n",
+       "667   https://www.vivino.com/zuccardi-malamado-malbe...  NaN  NaN   \n",
+       "755   https://www.vivino.com/zorzal-gran-terroir-pin...  NaN  NaN   \n",
+       "1885  https://www.vivino.com/zuccardi-cuvee-especial...  NaN  NaN   \n",
+       "\n",
+       "           winery  rating rating_qty  price       body tannis sweetness  \\\n",
+       "665   Cave Amadeu     3.8       5633  26.24    39.776%    NaN       NaN   \n",
+       "667      Zuccardi     3.8     5419.0  25.95        NaN    NaN       NaN   \n",
+       "755           NaN     NaN        NaN    NaN        NaN    NaN       NaN   \n",
+       "1885     Zuccardi     3.9     1112.0  36.74   29.1128%    NaN       NaN   \n",
+       "\n",
+       "        acidity                                              notes  \\\n",
+       "665     54.945%  {'red fruit': 56, 'tree fruit': 19, 'citrus': ...   \n",
+       "667         NaN  {'oaky': 146, 'black fruit': 110, 'dried fruit...   \n",
+       "755         NaN                                                NaN   \n",
+       "1885   72.6141%  {'tree fruit': 37, 'citrus': 22, 'yeasty': 16,...   \n",
+       "\n",
+       "                                               pairings          grapes  \\\n",
+       "665   ['pork', 'shellfish', 'rich fish (salmon, tuna...  ['Pinot Noir']   \n",
+       "667                                                 NaN      ['Malbec']   \n",
+       "755                                                 NaN             NaN   \n",
+       "1885  ['shellfish', 'any junk food will do', 'appeti...  ['Chardonnay']   \n",
+       "\n",
+       "                                               region  \\\n",
+       "665   ['Brazil', 'Rio Grande do Sul', 'Serra Gaúcha']   \n",
+       "667                          ['Argentina', 'Mendoza']   \n",
+       "755                                               NaN   \n",
+       "1885                         ['Argentina', 'Mendoza']   \n",
+       "\n",
+       "                              style alcohol  \\\n",
+       "665             Brazilian Sparkling   12.5%   \n",
+       "667                             NaN     13%   \n",
+       "755                             NaN     NaN   \n",
+       "1885  Argentinian Mendoza Sparkling     12%   \n",
+       "\n",
+       "                                                  image  \n",
+       "665   https://images.vivino.com/thumbs/2eG1E4YvQD2lD...  \n",
+       "667   https://images.vivino.com/thumbs/jF7MMUTqSfGFM...  \n",
+       "755                                                 NaN  \n",
+       "1885  https://images.vivino.com/thumbs/6qXEWMvzS9W5E...  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "wines_left = all_wines[all_wines[\"name\"].isna()]\n",
-    "ut.save_csv(wines_left)\n"
+    "for col in wines5.columns:\n",
+    "    if col != \"wine_link\":\n",
+    "        merged[col] = merged[col + \"_fix\"].combine_first(merged[col])\n",
+    "\n",
+    "merged = merged[all_wines.columns]\n",
+    "\n",
+    "ut.save_csv(merged, filename=\"all_wines_complete.csv\", path=\"../../../src/data/processed/\")\n",
+    "\n",
+    "merged[merged[\"name\"].isna()]"
    ]
   }
  ],
