Change price quality ratio

--- a/notebooks/eda_draft.ipynb
+++ b/notebooks/eda_draft.ipynb
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "id": "fcfe5609",
    "metadata": {},
    "outputs": [
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "b55572ba",
    "metadata": {},
    "outputs": [
@@ -1362,133 +1362,133 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1635</th>\n",
-       "      <td>Appellation En Fuego Malbec</td>\n",
-       "      <td>1438.99</td>\n",
+       "      <th>993</th>\n",
+       "      <td>Rosé</td>\n",
+       "      <td>6.55</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>0.368421</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1088</th>\n",
+       "      <td>Astica Torrontés</td>\n",
+       "      <td>6.99</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>0.263158</td>\n",
+       "      <td>0.000307</td>\n",
+       "      <td>856.722488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1621</th>\n",
+       "      <td>Cavas Don Nicasio Chardonnay</td>\n",
+       "      <td>7.99</td>\n",
        "      <td>4.1</td>\n",
        "      <td>0.631579</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>350.973171</td>\n",
+       "      <td>0.001005</td>\n",
+       "      <td>628.263158</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Estiba Reservada</td>\n",
-       "      <td>675.00</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>0.947368</td>\n",
-       "      <td>0.466651</td>\n",
-       "      <td>143.617021</td>\n",
+       "      <th>1127</th>\n",
+       "      <td>Malbec</td>\n",
+       "      <td>6.99</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>0.157895</td>\n",
+       "      <td>0.000307</td>\n",
+       "      <td>514.033493</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Cobos Viña Cobos Malbec</td>\n",
-       "      <td>599.99</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>0.947368</td>\n",
-       "      <td>0.414286</td>\n",
-       "      <td>127.657447</td>\n",
+       "      <th>1819</th>\n",
+       "      <td>Red Blend</td>\n",
+       "      <td>9.95</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.578947</td>\n",
+       "      <td>0.002374</td>\n",
+       "      <td>243.913932</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Estiba Reservada</td>\n",
-       "      <td>580.00</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>0.947368</td>\n",
-       "      <td>0.400331</td>\n",
-       "      <td>123.404255</td>\n",
+       "      <th>521</th>\n",
+       "      <td>Barrel Select Malbec</td>\n",
+       "      <td>9.99</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>0.526316</td>\n",
+       "      <td>0.002401</td>\n",
+       "      <td>219.161567</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Adrianna Vineyard Mundus Bacillus Terrae Malbec</td>\n",
-       "      <td>514.00</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>0.894737</td>\n",
-       "      <td>0.354256</td>\n",
-       "      <td>111.739130</td>\n",
+       "      <th>1839</th>\n",
+       "      <td>La Flor Malbec</td>\n",
+       "      <td>9.99</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>0.526316</td>\n",
+       "      <td>0.002401</td>\n",
+       "      <td>219.161567</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1160</th>\n",
-       "      <td>Adrianna Vineyard Mundus Bacillus Terrae Malbec</td>\n",
-       "      <td>395.00</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>0.894737</td>\n",
-       "      <td>0.271181</td>\n",
-       "      <td>85.869565</td>\n",
+       "      <th>1933</th>\n",
+       "      <td>Alta Pinot Grigio</td>\n",
+       "      <td>9.99</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>0.526316</td>\n",
+       "      <td>0.002401</td>\n",
+       "      <td>219.161567</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Adrianna Vineyard Mundus Bacillus Terrae Malbec</td>\n",
-       "      <td>395.00</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>0.894737</td>\n",
-       "      <td>0.271181</td>\n",
-       "      <td>85.869565</td>\n",
+       "      <th>1942</th>\n",
+       "      <td>Cabernet Sauvignon</td>\n",
+       "      <td>9.99</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>0.526316</td>\n",
+       "      <td>0.002401</td>\n",
+       "      <td>219.161567</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Cobos Volturno</td>\n",
-       "      <td>399.99</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>0.947368</td>\n",
-       "      <td>0.274664</td>\n",
-       "      <td>85.104255</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1145</th>\n",
-       "      <td>Cobos Volturno</td>\n",
-       "      <td>399.99</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>0.947368</td>\n",
-       "      <td>0.274664</td>\n",
-       "      <td>85.104255</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1195</th>\n",
-       "      <td>Adrianna Vineyard Mundus Bacillus Terrae Malbec</td>\n",
-       "      <td>367.49</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>0.842105</td>\n",
-       "      <td>0.251976</td>\n",
-       "      <td>81.664444</td>\n",
+       "      <th>1122</th>\n",
+       "      <td>Cabernet Sauvignon</td>\n",
+       "      <td>8.13</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>0.210526</td>\n",
+       "      <td>0.001103</td>\n",
+       "      <td>190.864757</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 name    price  rating  \\\n",
-       "1635                      Appellation En Fuego Malbec  1438.99     4.1   \n",
-       "1                                    Estiba Reservada   675.00     4.7   \n",
-       "7                             Cobos Viña Cobos Malbec   599.99     4.7   \n",
-       "2                                    Estiba Reservada   580.00     4.7   \n",
-       "17    Adrianna Vineyard Mundus Bacillus Terrae Malbec   514.00     4.6   \n",
-       "1160  Adrianna Vineyard Mundus Bacillus Terrae Malbec   395.00     4.6   \n",
-       "15    Adrianna Vineyard Mundus Bacillus Terrae Malbec   395.00     4.6   \n",
-       "4                                      Cobos Volturno   399.99     4.7   \n",
-       "1145                                   Cobos Volturno   399.99     4.7   \n",
-       "1195  Adrianna Vineyard Mundus Bacillus Terrae Malbec   367.49     4.5   \n",
+       "                              name  price  rating  rating_scaled  \\\n",
+       "993                           Rosé   6.55     3.6       0.368421   \n",
+       "1088              Astica Torrontés   6.99     3.4       0.263158   \n",
+       "1621  Cavas Don Nicasio Chardonnay   7.99     4.1       0.631579   \n",
+       "1127                        Malbec   6.99     3.2       0.157895   \n",
+       "1819                     Red Blend   9.95     4.0       0.578947   \n",
+       "521           Barrel Select Malbec   9.99     3.9       0.526316   \n",
+       "1839                La Flor Malbec   9.99     3.9       0.526316   \n",
+       "1933             Alta Pinot Grigio   9.99     3.9       0.526316   \n",
+       "1942            Cabernet Sauvignon   9.99     3.9       0.526316   \n",
+       "1122            Cabernet Sauvignon   8.13     3.3       0.210526   \n",
        "\n",
-       "      rating_scaled  price_scaled  price_quality_scaled  \n",
-       "1635       0.631579      1.000000            350.973171  \n",
-       "1          0.947368      0.466651            143.617021  \n",
-       "7          0.947368      0.414286            127.657447  \n",
-       "2          0.947368      0.400331            123.404255  \n",
-       "17         0.894737      0.354256            111.739130  \n",
-       "1160       0.894737      0.271181             85.869565  \n",
-       "15         0.894737      0.271181             85.869565  \n",
-       "4          0.947368      0.274664             85.104255  \n",
-       "1145       0.947368      0.274664             85.104255  \n",
-       "1195       0.842105      0.251976             81.664444  "
+       "      price_scaled  price_quality_scaled  \n",
+       "993       0.000000                   inf  \n",
+       "1088      0.000307            856.722488  \n",
+       "1621      0.001005            628.263158  \n",
+       "1127      0.000307            514.033493  \n",
+       "1819      0.002374            243.913932  \n",
+       "521       0.002401            219.161567  \n",
+       "1839      0.002401            219.161567  \n",
+       "1933      0.002401            219.161567  \n",
+       "1942      0.002401            219.161567  \n",
+       "1122      0.001103            190.864757  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "wines_filtrados = wines[wines['price'] > 0].copy()\n",
-    "wines_filtrados['price_quality_scaled'] = wines_filtrados['price'] / wines_filtrados['rating']\n",
+    "#wines_filtrados['price_quality_scaled'] = wines_filtrados['rating_scaled'] / wines_filtrados['price_scaled']\n",
     "top_vinos_cp = wines_filtrados.sort_values(by='price_quality_scaled', ascending=False).head(10)\n",
     "top_vinos_cp[['name', 'price', 'rating', 'rating_scaled', 'price_scaled', 'price_quality_scaled']]\n"
    ]
