Comentarios en eda agregados (markdown)

--- a/notebooks/eda_draft.ipynb
+++ b/notebooks/eda_draft.ipynb
@@ -1745,6 +1745,7 @@
     "- ¿Cuales son los ratings más comunes?\n",
     "- ¿El rating se relaciona con la cantidad de ratings?\n",
     "- ¿El rating es un buen parámetro para la recomendación de vinos?\n",
+    "- ¿La cantidad de ratings se relaciona con un buen rating?\n",
     "<br>\n",
     "<br>\n",
     "---"
@@ -2930,6 +2931,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "36960293",
+   "metadata": {},
+   "source": [
+    "# 03 | Relaciones entre variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8d03c628",
    "metadata": {},
    "source": [
@@ -3472,7 +3481,7 @@
    "id": "81b86af9",
    "metadata": {},
    "source": [
-    "## Análisis de variables categóricas"
+    "# 02 | Análisis de variables categóricas"
    ]
   },
   {
@@ -3948,6 +3957,16 @@
     "plt.xlabel(\"Rating promedio\")\n",
     "plt.gca().invert_yaxis()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fd48ce2",
+   "metadata": {},
+   "source": [
+    "# 04 | Reducción de dimensionalidad y selección de características\n",
+    "\n",
+    "*(Análisis Exploratorio de Datos con técnicas avanzadas)*"
    ]
   },
   {
