Organización de EDA + Null Analysis

--- a/notebooks/etl_draft.ipynb
+++ b/notebooks/etl_draft.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
+    "import ast\n",
+    "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
     "sys.path.append(os.path.abspath(os.path.join('..', 'src', 'utils')))\n",
-    "import utils as ut\n",
-    "import ast"
+    "\n",
+    "import utils as ut"
    ]
   },
   {
@@ -23,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +246,7 @@
        "4  https://images.vivino.com/thumbs/D1Mf1fYnRnage...  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +267,7 @@
        "(2026, 18)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +428,7 @@
        "1635  https://images.vivino.com/thumbs/TwuvDFXuToi7l...  "
       ]
      },
-     "execution_count": 143,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +632,7 @@
        "2  https://images.vivino.com/thumbs/Yt464jw0QS-ug...  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +806,7 @@
        "1  https://images.vivino.com/thumbs/Yt464jw0QS-ug...  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1015,7 @@
        "[3 rows x 30 columns]"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1039,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1192,7 @@
        "[3 rows x 119 columns]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1215,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "winedf_tra[\"Pedro Giménez\"] = winedf_tra[\"Pedro Giménez\"].fillna(0)\n",
+    "\n",
+    "winedf_tra[\"Pedro Ximenez\"] = np.where(\n",
+    "    winedf_tra[\"Pedro Giménez\"] == 1,\n",
+    "    1,\n",
+    "    winedf_tra[\"Pedro Ximenez\"]\n",
+    ")\n",
+    "\n",
+    "winedf_tra = winedf_tra.drop(columns=[\"Pedro Giménez\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1220,8 +1241,8 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 2026 entries, 0 to 2025\n",
-      "Columns: 119 entries, wine_link to Vista Flores\n",
-      "dtypes: Int64(93), float64(21), object(5)\n",
+      "Columns: 118 entries, wine_link to Vista Flores\n",
+      "dtypes: Int64(91), float64(22), object(5)\n",
       "memory usage: 2.0+ MB\n"
      ]
     }
@@ -1232,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
